--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.10.0",
     "firebase": "^10.7.0",
     "flowbite-react": "^0.7.0",
     "framer-motion": "^10.16.5",
