--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.10.0",
+    "axios": "^1.6.2",
     "firebase": "^10.7.0",
     "flowbite-react": "^0.7.0",
     "framer-motion": "^10.16.5",
@@ -21,7 +22,8 @@
     "react-helmet": "^6.1.0",
     "react-router-dom": "^6.20.0",
     "react-toastify": "^9.1.3",
-    "sort-by": "^1.2.0"
+    "sort-by": "^1.2.0",
+    "sweetalert2": "^11.10.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
